namespace First_Lab.Num3.Units;

public enum License
{
    BCat,
    Dcat
}