namespace First_Lab.Num3.Units.Passanger;

public interface IBusPassenger
{
    
}